[project]
name = "qitip"
version = "0.1.0"
description = "Information inequality prover dedicated to quantum information theory"
authors = [
    {name = "Shao-Lun Huang", email = "simon.linux7@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "ruff>=0.3.2",
    "black>=24.2.0",
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
