[project]
name = "qitip"
version = "0.1.0"
description = "Python package that serves as quantum information inequality prover"
authors = [
    {name = "Shao-Lun Huang", email = "shaolh105022105@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
